# IEC

./: CMakeLists.txt  README.md
model_param/ncnn/: resnet18.param
src/mnn/: resnet18.cpp
src/ncnn/: resnet18.cpp
src/pdl/src/assets/models/resnet/: model.pdmodel
src/pdl/src/shell/: CMakeLists.txt  build.sh  resnet18.cpp  run.sh
src/pdl/src/shell/build.linux.amd64/: CMakeCache.txt  Makefile  cmake_install.cmake  resnet18_pdl
